@@ -27,32 +27,61 @@ THE SOFTWARE.
   <parent>
     <artifactId>pom</artifactId>
     <groupId>org.jvnet.hudson.main</groupId>
-    <version>1.306-SNAPSHOT</version>
+    <version>1.386-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jvnet.hudson.main</groupId>
   <artifactId>hudson-test-harness</artifactId>
+  <packaging>stapler-jar</packaging>
   <name>Test harness for Hudson and plugins</name>
   <description>
     Unit test harness (src/main) and Unit tests for Hudson core (src/test)
   </description>
+
+  <properties>
+    <concurrency>1</concurrency> <!-- -1 means # of processors in the system -->
+  </properties>
 
   <build>
     <plugins>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <!-- override with -DforkMode=pertest if you have "unable to create thread problems" on Windows -->
-          <forkMode>once</forkMode>
-          <!--<reportFormat>plain</reportFormat>-->
-          <redirectTestOutputToFile>true</redirectTestOutputToFile>
+          <skip>true</skip><!-- tests now run by maven-junit-plugin -->
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.groovy.maven</groupId>
-        <artifactId>gmaven-plugin</artifactId>
+        <!-- see http://maven-junit-plugin.kenai.com/ for more info -->
+        <groupId>com.sun.maven</groupId>
+        <artifactId>maven-junit-plugin</artifactId>
+        <version>1.5</version>
         <executions>
           <execution>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration>
+              <fork>true</fork>
+              <concurrency>${concurrency}</concurrency>
+              <argLine>-XX:MaxPermSize=192m -Xmx256m -Dfile.encoding=UTF-8</argLine>
+              <systemProperties>
+                <property>
+                  <!-- use AntClassLoader that supports predictable file handle release -->
+                  <name>hudson.ClassicPluginStrategy.useAntClassLoader</name>
+                  <value>true</value>
+                </property>
+              </systemProperties>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.kohsuke.gmaven</groupId>
+        <artifactId>gmaven-plugin</artifactId>
+        <version>1.0-rc-5-patch-2</version>
+        <executions>
+          <execution>
+            <id>preset-packager</id>
             <phase>process-resources</phase>
             <goals>
               <goal>execute</goal>
@@ -61,14 +90,27 @@ THE SOFTWARE.
               <source>${pom.basedir}/src/main/preset-data/package.groovy</source>
             </configuration>
           </execution>
+          <execution>
+            <id>test-in-groovy</id>
+            <!-- allow tests written in Groovy -->
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+          </execution>
         </executions>
         <dependencies>
           <dependency>
-            <groupId>ant</groupId>
+            <groupId>org.apache.ant</groupId>
             <artifactId>ant</artifactId>
-            <version>1.6.5</version>
+            <version>1.8.0</version>
           </dependency>
         </dependencies>
+      </plugin>
+      <plugin>
+        <groupId>org.kohsuke.stapler</groupId>
+        <artifactId>maven-stapler-plugin</artifactId>
+        <version>1.15</version>
+        <extensions>true</extensions>
       </plugin>
     </plugins>
   </build>
@@ -90,9 +132,9 @@ THE SOFTWARE.
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>maven-plugin</artifactId>
-      <version>${project.version}</version>
+      <groupId>org.jvnet.hudson.plugins</groupId>
+      <artifactId>subversion</artifactId>
+      <version>1.11</version>
     </dependency>
     <dependency>
       <groupId>org.mortbay.jetty</groupId>
@@ -112,15 +154,21 @@ THE SOFTWARE.
     <dependency>
       <groupId>org.jvnet.hudson</groupId>
       <artifactId>htmlunit</artifactId>
-      <version>2.2-hudson-9</version>
+      <version>2.6-hudson-2</version>
+      <exclusions>
+      	<exclusion>
+	      	<!--  hides JDK DOM classes in Eclipse -->
+      		<groupId>xml-apis</groupId>
+      		<artifactId>xml-apis</artifactId>
+      	</exclusion>
+      </exclusions>
     </dependency>
 
-    <dependency><!-- temporary, until we bump to new htmlunit -->
+    <dependency>
       <groupId>org.jvnet.hudson</groupId>
-      <artifactId>htmlunit-core-js</artifactId>
-      <version>2.2-hudson-2</version>
+      <artifactId>embedded-rhino-debugger</artifactId>
+      <version>1.2</version>
     </dependency>
-    
     <dependency>
       <!-- for testing JNLP launch. -->
       <groupId>org.jvnet.hudson</groupId>
@@ -137,9 +185,21 @@ THE SOFTWARE.
       <artifactId>easymock</artifactId>
       <version>2.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.8.5</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <profiles>
+    <profile>
+      <id>light-test</id>
+      <properties>
+        <skipTests>true</skipTests>
+      </properties>
+    </profile>
     <profile>
       <!--
         Obtain code coverage report. This is done by running Unit tests on our own and suppressing surefire.
@@ -159,7 +219,7 @@ THE SOFTWARE.
                 </goals>
                 <configuration>
                   <scriptpath>
-                    <!-- load helpers from core -->
+                    <!-- load helpers from hg core -->
                     <element>${project.basedir}/../core/src/build-script</element>
                   </scriptpath>
                   <source>${project.basedir}/src/build-script/unitTest.groovy</source>
@@ -169,7 +229,8 @@ THE SOFTWARE.
           </plugin>
           <plugin>
             <!-- unit tests are run by GMaven through Ant. -->
-            <artifactId>maven-surefire-plugin</artifactId>
+            <groupId>com.sun.maven</groupId>
+            <artifactId>maven-junit-plugin</artifactId>
             <configuration>
               <skipTests>true</skipTests>
             </configuration>
